--- a/app/src/main/res/layout-ar/activity_vendor_list_details.xml
+++ b/app/src/main/res/layout-ar/activity_vendor_list_details.xml
@@ -21,14 +21,14 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="@color/app_fontBlackColor"
-                android:layout_height="204dp">
+                android:layout_height="204dp"
+                android:background="@color/app_fontBlackColor">
 
                 <ImageView
                     android:id="@+id/vendor_list_image"
                     android:layout_width="match_parent"
-                    android:scaleType="centerCrop"
-                    android:layout_height="@dimen/_160sdp" />
+                    android:layout_height="@dimen/_160sdp"
+                    android:scaleType="centerCrop" />
 
                 <com.sa.rezq.view.AppTextView
                     android:layout_width="match_parent"
@@ -43,9 +43,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="@dimen/_4sdp"
+                    android:alpha="0.4"
+                    android:visibility="gone"
                     android:gravity="center"
                     android:text=""
-                    android:alpha="0.4"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
             </RelativeLayout>
@@ -53,68 +54,69 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
-                android:layout_gravity="center"
                 android:layout_marginRight="10dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true">
 
 
-                <com.sa.rezq.view.AppTextView
-                    android:id="@+id/tvRating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="5dp"
-                    android:gravity="center"
-                    android:text=""
-                    android:textColor="@color/yellow"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
+                    <com.sa.rezq.view.AppTextView
+                        android:id="@+id/tvRating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="5dp"
+                        android:gravity="center"
+                        android:text=""
+                        android:textColor="@color/yellow"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/tv_star"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/tvRating"
-                    android:layout_marginRight="@dimen/_4sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_baseline_star_rate_24" />
+                    <ImageView
+                        android:id="@+id/tv_star"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="@dimen/_4sdp"
+                        android:layout_toLeftOf="@+id/tvRating"
+                        android:src="@drawable/ic_rating_star" />
 
-                <com.sa.rezq.view.AppTextView
-                    android:id="@+id/tv_count_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@+id/tv_star"
-                    android:gravity="center"
-                    android:text=""
-                    android:textAllCaps="true"
-                    android:textColor="#171717"
-                    android:textSize="16dp" />
+                    <com.sa.rezq.view.AppTextView
+                        android:id="@+id/tv_count_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_toLeftOf="@+id/tv_star"
+                        android:gravity="center"
+                        android:text=""
+                        android:textAllCaps="true"
+                        android:textAppearance="@style/SmallMediumText"
+                        android:textColor="@color/app_text_color_common" />
 
-                <com.sa.rezq.view.AppTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="6dp"
-                    android:layout_toLeftOf="@+id/tv_count_rating"
-                    android:gravity="center"
-                    android:layout_centerInParent="true"
-                    android:text="@string/reating"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
-                    android:textColor="#171717"
-                    android:textSize="12dp" />
+                    <com.sa.rezq.view.AppTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginRight="6dp"
+                        android:layout_toLeftOf="@+id/tv_count_rating"
+                        android:gravity="center"
+                        android:text="@string/reating"
+                        android:textAllCaps="true"
+                        android:textAppearance="@style/SmallerText"
+                        android:textColor="@color/app_text_color_common"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentLeft="true">
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true">
 
                     <ImageView
                         android:id="@+id/iv_favourite"
@@ -128,7 +130,7 @@
                         android:id="@+id/tvFav"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
+                        android:layout_alignParentLeft="true"
                         android:layout_gravity="center"
                         android:layout_marginLeft="3dp"
                         android:text="@string/Favourite"
@@ -149,16 +151,16 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp">
+                android:layout_marginRight="10dp">
 
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/TvAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/address"
                     android:layout_marginLeft="@dimen/_10sdp"
+                    android:text="@string/address"
                     android:textColor="#8D8D8D"
                     android:textSize="12dp" />
 
@@ -167,8 +169,8 @@
                     android:layout_width="211dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/TvAddress"
-                    android:layout_marginTop="5dp"
                     android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginTop="5dp"
                     android:text=""
                     android:textColor="#171717"
                     android:textSize="14dp" />
@@ -205,9 +207,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvAlertMsg"
-                    android:gravity="right"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="right"
                     android:text="@string/offers"
                     android:textColor="#8D8D8D"
                     android:textSize="12dp"
@@ -218,10 +220,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/offer"
-                    android:visibility="gone"
-                    android:layout_marginRight="12dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="vertical">
+                    android:layout_marginRight="12dp"
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <com.vlonjatg.progressactivity.ProgressLinearLayout
                         android:id="@+id/details_progressActivity"
@@ -292,10 +294,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvAlertMsg"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="@string/ratings"
+                    android:layout_marginRight="10dp"
                     android:gravity="right"
+                    android:text="@string/ratings"
                     android:textColor="#8D8D8D"
                     android:textSize="12dp"
                     android:textStyle="bold" />
@@ -338,8 +340,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/contentRate"
-                    android:layout_marginRight="12dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="12dp"
                     android:orientation="vertical">
 
                     <com.vlonjatg.progressactivity.ProgressLinearLayout
@@ -361,7 +363,6 @@
 
                         </androidx.recyclerview.widget.RecyclerView>
                     </com.vlonjatg.progressactivity.ProgressLinearLayout>
-
 
 
                 </LinearLayout>
