--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -65,10 +65,8 @@
                 android:layout_height="@dimen/_35sdp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:layout_marginRight="@dimen/_5sdp"
-                android:src="@drawable/ic_guest_profile">
+                android:layout_marginRight="@dimen/_5sdp" />
 
-            </de.hdodenhof.circleimageview.CircleImageView>
 
         </RelativeLayout>
     </LinearLayout>
