--- a/app/src/main/res/layout/tool_bar_search_detail.xml
+++ b/app/src/main/res/layout/tool_bar_search_detail.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:padding="@dimen/_10sdp"
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/ic_back_right" />
 
         <com.sa.rezq.view.AppTextView_Title
             android:id="@+id/toolbar_title"
